--- a/package.json
+++ b/package.json
@@ -1,30 +1,63 @@
 {
-  "name": "projeto---react",
-  "version": "1.0.0",
-  "description": "Este projeto foi desenvolvido como parte da disciplina **Programação Web Fullstack**. Trata-se de uma aplicação frontend utilizando React.js, Material UI e Redux para consumir dados de uma API de receitas.",
-  "main": "index.js",
-  "dependencies": {
-    "bson": "^6.10.2",
-    "debug": "^4.4.0",
-    "kareem": "^2.6.3",
-    "memory-pager": "^1.5.0",
-    "mongodb": "^6.13.0",
-    "mongodb-connection-string-url": "^3.0.2",
-    "mongoose": "^8.10.0",
-    "mpath": "^0.9.0",
-    "mquery": "^5.0.0",
-    "ms": "^2.1.3",
-    "punycode": "^2.3.1",
-    "sift": "^17.1.3",
-    "sparse-bitfield": "^3.0.3",
-    "tr46": "^5.0.0",
-    "webidl-conversions": "^7.0.0",
-    "whatwg-url": "^14.1.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {}
+    "name": "receita-react",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
+        "@fontsource/roboto": "^5.1.0",
+        "@mui/icons-material": "^6.1.7",
+        "@mui/material": "^6.1.7",
+        "@mui/styled-engine-sc": "^6.1.7",
+        "@reduxjs/toolkit": "^2.3.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.7.9",
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "express-session": "^1.18.1",
+        "mongoose": "^8.10.0",
+        "morgan": "^1.10.0",
+        "nodemon": "^3.1.9",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.28.0",
+        "react-scripts": "5.0.1",
+        "styled-components": "^6.1.13",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "servidor": "npx nodemon backend/app.js"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+    "main": "index.js",
+    "author": "",
+    "license": "ISC"
 }
