Importação de todas as bibliotecas necessárias para poder implementar compression, rateLimiter e a proteção com Sanitizers juntamente do express-validator. Colocamos o type module também, para parar de dar erro no servidor.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "receita-react",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
@@ -15,13 +16,17 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
+        "compression": "^1.8.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-rate-limit": "^7.5.0",
         "express-session": "^1.18.1",
+        "express-validator": "^7.2.1",
         "mongoose": "^8.10.0",
         "morgan": "^1.10.0",
+        "node-cache": "^5.1.2",
         "nodemon": "^3.1.9",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
